[tool.poetry]
name = "git-package-example"
version = "0.2.0-alpha.1"
description = ""
authors = ["Turanga Leela <turanga.leela@planetexpress.io>"]
readme = "README.md"
packages = [{include = "git_package_example"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
